# PhysicsSimulator

./: .gitignore  .luarc.json  CMakeLists.txt  LICENSE  PhysicsEngine.sln  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  README.md  imgui.ini
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
Resources/Models/: trump.stl
core/: CMakeLists.txt
core/src/components/: Rigidbody.h  TextureInfo.h
core/src/core/: GUI.h
core/src/core/ECS/: ComponentArray.h
core/src/physics/: PhysicsSystem.h
core/src/renderables/: Mesh.h  Model.h  Points.h  Renderable.h
core/src/renderer/: Camera.h  EBO.h
lua_defs/: globals.lua  types.lua
scenes/: test.lua
shaders/: basic.frag  basic.vert  chess.frag  chess.vert  default.frag  default.vert  diffuse.frag  diffuse.vert  flat.frag  flat.vert  light.frag  light.vert
src/: BoundingBox.h  BoundingBoxTree.cpp  BoundingBoxTree.h  Camera.cpp  Camera.h  ChessModel.cpp  ChessModel.h  Collidable.h  ComponentManager.h  EBO.cpp  EBO.h  GameController.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SceneController.cpp  SceneController.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c  shaderClass.cpp  shaderClass.h
src/app/: CMakeLists.txt  Main.cpp
src/components/: Collider.h  Components.h  RenderInfo.h  Renderable.h  Rigidbody.h  Transform.h
src/core/: CMakeLists.txt  ComponentArray.h  ComponentManager.h  ECS.h  EntityManager.h  GUI.h  GlobalTypes.h  System.h  SystemManager.h  UniformBufferManager.h  WindowManager.h  pch.h
src/core/ECS/: EntityManager.h  System.h  SystemManager.h
src/core/dependencies/glad/: glad.h
src/core/dependencies/glfw-3.4/include/GLFW/: glfw3.h
src/core/dependencies/glfw-3.4/src/: CMakeLists.txt  cocoa_init.m
src/core/dependencies/glm/: CMakeLists.txt
src/core/dependencies/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp
src/core/dependencies/lua/: CMakeLists.txt
src/core/dependencies/sol/: sol.hpp
src/core/src/components/: Collider.h  RenderInfo.h  Rigidbody.h  TextureInfo.h  Transform.h
src/core/src/core/: EventManager.h  GUI.h  GlobalTypes.h  UniformBufferManager.h  WindowManager.h  World.h
src/core/src/core/ECS/: ComponentArray.h  ComponentManager.h  ECSController.h  EntityManager.h  SystemManager.h
src/core/src/lua/: LuaBindings_Core.cpp  LuaBindings_Debug.cpp  LuaBindings_Physics.cpp  LuaRuntime.cpp  LuaRuntime.h
src/core/src/math/: Ray.h
src/core/src/math/mesh/: MeshImport.h  MeshProcessing.h  MeshSimplify.h  OBJ_Loader.h  SimpleShapes.h
src/core/src/physics/: BoundingBox.h  DynamicTree.cpp  DynamicTree.h  MeshCollider.h  PhysicsSystem.h  StaticTree.cpp  StaticTree.h
src/core/src/renderables/: Lines.h  Mesh.h  Model.h  ObjModel.h  Points.h  Renderable.h
src/core/src/renderer/: Camera.h  EBO.h  RenderSystem.cpp  RenderSystem.h  Shader.h  Texture.h  VAO.h  VBO.h
src/core/src/scene/: MeshHelper.h  RenderableHelper.h  SceneImporter.h
src/core/src/scene/helpers/: CubeHelper.h  SphereHelper.h
src/core/src/utils/: ClassName.h  Exceptions.h  Logger.h  MeshImport.h  MeshSimplify.h  PathUtils.h  Raycast.h  SimpleShapes.h  ThreadPool.h  Timer.h
src/ecs/: ComponentManager.h  ECS.h  EntityManager.h  SystemManager.h
src/lua_engine/: CMakeLists.txt  pch.h
src/lua_engine/include/lua_engine/: LuaBindings.h  LuaLogger.h  LuaRuntime.h
src/lua_engine/src/lua/: LuaBindings_Core.cpp  LuaBindings_Debug.cpp  LuaBindings_Dynamic.cpp  LuaBindings_Physics.cpp  LuaBindings_Stable.cpp  LuaRuntime.cpp
src/lua_engine/src/scene/: ModelHelper.h  RenderableHelper.h  SceneHelper.h
src/lua_engine/src/scene/helpers/: CubeHelper.h  FloorHelper.h  LinesHelper.h  SphereHelper.h
src/physics/: BoundingBox.h  BoundingBoxTree.cpp  BoundingBoxTree.h  Cluster.h  Collidable.h  DynamicTree.cpp  DynamicTree.h  KDTree.h  PhysicsSystem.h  StaticTree.h
src/renderables/: ChessModel.h  Lines.h  Mesh.h  Model.h  Points.h  Renderable.h
src/renderer/: Camera.cpp  Camera.h  EBO.h  RenderSystem.cpp  RenderSystem.h  Shader.h  Texture.h  UBO.h  VAO.h  VBO.h  shaderClass.h
src/systems/: System.h
src/utils/: MeshImport.h  MeshProcessing.h  MeshSimplify.h  ModelImport.h  SimpleShapes.h  ThreadPool.h  Timer.h
vendors/lua/: CMakeLists.txt
